<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_next"
        android:title="@string/action_next"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_prev"
        android:title="@string/action_previous"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_move"
        android:title="@string/action_move"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_new_tag"
        android:title="@string/action_new_tag"
        android:orderInCategory="4"
        app:showAsAction="never"
        />
</menu>