<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/round_inbox_black_36"
            android:title="@string/title_nav_inbox" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/title_nav_sent" />
        <!--<item-->
            <!--android:id="@+id/nav_new_folder"-->
            <!--android:icon="@drawable/round_create_new_folder_black_36"-->
            <!--android:title="@string/title_nav_new_folder" />-->

        <!--<item-->
            <!--android:id="@+id/nav_new_folder2"-->
            <!--android:icon="@drawable/round_create_new_folder_black_36"-->
            <!--android:title="@string/title_nav_new_folder" />-->
    </group>
    <group>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/round_settings_black_36"
            android:title="@string/title_nav_setting" />
    </group>
</menu>

